# hello-actix-web

./: .gitignore  Cargo.toml  README.md
mk/: app.mk  cargo.mk  curl.mk  psql.mk  sqlx.mk
mk/.artefacts/.logs/: hello-actix
src/: main.rs
tests/: person.rs
tests/setup/: mod.rs
